@@ -1,3 +1,13 @@
+2026-01-19  G. Branden Robinson <g.branden.robinson@gmail.com>
+
+	[glilypond]: Add smoke test.
+
+	* tests/smoke-test.sh: Add (directory and) test script.
+	* glilypond.am: Add script to new `glilypond_TESTS` macro and
+	append that macro to `TESTS` macro, so that "make check" runs
+	the test.  Append `glilypond_TESTS` to `EXTRA_DIST`, so that the
+	test script ships in distribution archives.
+
 2025-12-20  G. Branden Robinson <g.branden.robinson@gmail.com>
 
 	* README.txt: Rename this...
